--- a/src/_app.sass
+++ b/src/_app.sass
@@ -10,9 +10,9 @@ body
     z-index: -1
     position: absolute
     top: 0
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
 
 .center
     height: 80vh
@@ -26,7 +26,7 @@ body
 
 .loginForm
     background-color: #3280bd
-    box-shadow: 0px 0px 73px 32px rgba(0,0,0,0.7);
+    box-shadow: 0 0 73px 32px rgba(0, 0, 0, 0.7)
     border: 2px solid black
     border-radius: 10px
     padding: 2vw
