--- a/src/_app.sass
+++ b/src/_app.sass
@@ -22,11 +22,11 @@ body
     flex-direction: column
 
 .formHeader
-    color: #000
+    color: #000000
 
 .loginForm
     background-color: #3280bd
-    box-shadow: 0 0 73px 32px rgba(0, 0, 0, 0.7)
+    box-shadow: 0 0 73px 32px rgba(0, 0, 0, .7)
     border: 2px solid black
     border-radius: 10px
     padding: 2vw
