--- a/src/_app.sass
+++ b/src/_app.sass
@@ -25,7 +25,7 @@ body
     color: #000000
 
 .loginForm
-    background-color: #3280bd
+    background-color: #609dcb
     box-shadow: 0 0 73px 32px rgba(0, 0, 0, .7)
     border: 2px solid black
     border-radius: 10px
@@ -37,7 +37,7 @@ body
     margin: 2vh
 
     label
-        color: white
+        color: black
 
     input
         border-radius: 5px
