feat (connected redux/epics/server)

--- a/src/components/login/login.styles.sass
+++ b/src/components/login/login.styles.sass
@@ -28,3 +28,12 @@
         border: none
         outline: none
         padding: 1vh
+
+.loginButton
+    background-color: #135aa2
+    color: #ffffff
+    width: calc(100% - 4vh)
+    margin: 0 2vh
+    padding: 1vh
+    border: none
+    border-radius: 5px
